<resources>
    <string name="app_name">MyContactList</string>
    <string name="button">Button</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="button_to_display_contact_setting">Button to display contact setting</string>
    <string name="button_to_display_a_list_of_contacts">Button to display a list of contacts</string>
    <string name="button_to_display_contact_location">Button to display contact location</string>
    <string name="save">Save</string>
    <string name="contact">Contact:</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="city">City</string>
    <string name="sort_contacts_by">Sort Contacts By:</string>
    <string name="sort_order">Sort Order:</string>
    <string name="ascending">Ascending</string>
    <string name="radiobutton">RadioButton</string>
    <string name="DELETE">Delete</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView2</string>
    <string name="textview3">TextView</string>
    <string name="new_contact">New Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="descending">descending</string>
    <string name="get_coordinates">GET COORDINATES</string>
    <string name="longitude_none">Longitude: None</string>
    <string name="accuracy_none">Accuracy: None</string>
    <string name="latitude_none">Latitude: None</string>
    <string name="zipcode">Zipcode</string>
    <string name="state">State</string>
    <string name="enter_street_address">Enter Street Address</string>
    <string name="address">Address:</string>
    <string name="my_contact_list">My Contact List</string>
</resources>